# Linear-Algebra-Library

./: CMakeLists.txt  LICENSE  README.md
docs/: Documentation.md
docs/markdown/: Classes.md  Files.md  Functions.md
docs/markdown/classes/: Matrix.md
docs/markdown/files/: LinearAlgebra_hpp.md  Matrix_hpp.md  SolutionSLE_hpp.md  gaussian_elimination_hpp.md  inverse_matrix_method_hpp.md
docs/markdown/functions/: are_equal.md  gaussian_elimination.md  inverse_matrix_method.md
include/: CMakeLists.txt  LinearAlgebra.hpp
include/LinearAlgebra/: Matrix.hpp  SolutionSLE.hpp
include/LinearAlgebra/SolutionSLE/: gaussian_elimination.hpp  inverse_matrix_method.hpp  lu_decomposition.hpp
test/: CMakeLists.txt  LinearAlgebraTest.cpp
